# django_products

./: .env.sample  .gitignore  README.md  auth_data.json  data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_blog_owner.py  0004_alter_blog_options.py  0005_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
products/: admin.py  forms.py  models.py  services.py  urls.py  views.py
products/management/commands/: fun_data.py
products/migrations/: 0001_initial.py  0002_rename_date_created_product_created_at_and_more.py  0003_alter_product_created_at.py  0004_alter_product_image.py  0005_alter_product_created_at.py  0006_alter_product_created_at.py  0007_product_view_count.py  0008_blog.py  0009_delete_blog.py  0010_product_owner.py  0011_alter_product_options_product_published.py  0012_alter_product_options.py
products/templates/products/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  home.html  product_confirm_delete.html  product_detail.html  (+2 more)
products/templatetags/: my_tags.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_country.py  0003_user_token_verification.py
version_app/: admin.py  apps.py  models.py  urls.py  views.py
version_app/migrations/: 0001_initial.py  0002_alter_version_version_name.py  0003_alter_version_version_num.py  0004_alter_version_is_active.py
(+15 files in other folders)
