[tool.poetry]
name = "django-products"
version = "0.1.0"
description = ""
authors = ["Hoodnika <Hoodnika213@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pillow = "^10.2.0"
ipython = "^8.22.2"
psycopg2 = "^2.9.9"
django-stubs = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
